# repo_for_practice

./: pyproject.toml
git_practice/: testing_git.py
