[tool.poetry]
name = "git-practice"
version = "0.1.0"
description = ""
authors = ["Paweł Tomkiewicz <patom4@onet.pl>"]
readme = "README.md"
packages = [{include = "git_practice"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
